click to start for mobile screens

--- a/EasyLevel.html
+++ b/EasyLevel.html
@@ -13,8 +13,8 @@
   <a href="index.html" class="home-btn">
     <i class="fas fa-home"></i>
   </a>
-  <h1 id="level-title">Press A Key to Start</h1>
-  <div id="scores">
+  <h1 id="level-title">Press Any Key or <br>Tap Here to Start</h1>
+    <div id="scores">
     <p id="high-score">High Score: <span>0</span></p>
   </div>
   <div class="container">
