--- a/MediumLevel.html
+++ b/MediumLevel.html
@@ -12,7 +12,7 @@
     <a href="index.html" class="home-btn">
         <i class="fas fa-home"></i>
     </a>
-    <h1 id="level-title">Press A Key to Start</h1>
+    <h1 id="level-title">Press Any Key or Tap Here to Start</h1>
     <div id="scores">
         <p id="high-score">High Score: <span>0</span></p>
     </div>
